--- a/themes/PaperMod/assets/css/extended/blank.css
+++ b/themes/PaperMod/assets/css/extended/blank.css
@@ -40,3 +40,22 @@ img[title="ew1920"] {
     margin-right: -14px !important;
   }
 }
+
+.post-content table {
+  display: table;
+  width: 100%;
+  text-align: center !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.post-content table th {
+  text-align: center !important;
+  border-bottom: none !important;
+}
+
+.post-content img {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
