--- a/themes/PaperMod/layouts/_default/_markup/render-image.html
+++ b/themes/PaperMod/layouts/_default/_markup/render-image.html
@@ -1,8 +1,18 @@
 {{ if .Title }}
 <figure>
-  <img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ .Text }}" />
-  <figcaption>{{ .Title }}</figcaption>
+  <img
+    loading="lazy"
+    src="{{ .Destination | safeURL }}"
+    alt="{{ .Text }}"
+    title="{{ .Title }}"
+  />
+  <figcaption title="{{ .Title }}">{{ .Title }}</figcaption>
 </figure>
 {{ else }}
-<img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ .Text }}" />
+<img
+  loading="lazy"
+  src="{{ .Destination | safeURL }}"
+  alt="{{ .Text }}"
+  title="{{ .Title }}"
+/>
 {{ end }}
