--- a/themes/PaperMod/assets/css/extended/blank.css
+++ b/themes/PaperMod/assets/css/extended/blank.css
@@ -65,3 +65,7 @@ img[title="ew1920"] {
   margin-left: auto;
   margin-right: auto;
 }
+
+body {
+  font-family: 'SourceSans3', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+}
