Updating about page a bit

--- a/themes/PaperMod/layouts/partials/extend_head.html
+++ b/themes/PaperMod/layouts/partials/extend_head.html
@@ -3,3 +3,6 @@
 {{- /*     Can be overwritten by partial with the same name in the global layouts. */ -}}
 {{- /* Head custom content area end */ -}}
 <link rel="stylesheet" href="/fonts/font-family.css">
+<link rel="stylesheet" href="/fontawesome/css/fontawesome.min.css">
+<link rel="stylesheet" href="/fontawesome/css/brands.min.css">
+<link rel="stylesheet" href="/fontawesome/css/solid.min.css">
