--- a/themes/PaperMod/layouts/partials/extend_head.html
+++ b/themes/PaperMod/layouts/partials/extend_head.html
@@ -6,3 +6,4 @@
 <link rel="stylesheet" href="/fontawesome/css/fontawesome.min.css">
 <link rel="stylesheet" href="/fontawesome/css/brands.min.css">
 <link rel="stylesheet" href="/fontawesome/css/solid.min.css">
+<link rel="stylesheet" href="/fontawesome/css/regular.min.css">
