Style tweaks, add rss icon

--- a/themes/PaperMod/layouts/partials/header.html
+++ b/themes/PaperMod/layouts/partials/header.html
@@ -152,6 +152,9 @@
                 </a>
             </li>
             {{- end }}
+            <li>
+                <a href="/index.xml"><i class="fa-solid fa-rss" style="color: #ee802f"></i></a>
+            </li>
         </ul>
     </nav>
 </header>
