--- a/themes/PaperMod/assets/css/extended/blank.css
+++ b/themes/PaperMod/assets/css/extended/blank.css
@@ -69,3 +69,7 @@ img[title="ew1920"] {
 body {
   font-family: 'SourceSans3', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
 }
+
+#menu a:hover span {
+  box-shadow: 0 1px;
+}
