--- a/themes/PaperMod/layouts/partials/header.html
+++ b/themes/PaperMod/layouts/partials/header.html
@@ -153,7 +153,16 @@
             </li>
             {{- end }}
             <li>
-                <a href="/index.xml"><i class="fa-solid fa-rss" style="color: #ee802f"></i></a>
+                <a href="https://pixelfed.social/mphilpot"><span><i class="fa-brands fa-instagram" style="color: #af44bd"></i></span></a>
+            </li>
+            <li>
+                <a href="https://philpot.org/@mark"><span><i class="fa-brands fa-mastodon" style="color: #6363f5"></i></span></a>
+            </li>
+            <li>
+                <a href="https://micro.markphilpot.com"><span><i class="fa-brands fa-microblog" style="color: #f6c443"></i></span></a>
+            </li>
+            <li>
+                <a href="/index.xml"><span><i class="fa-solid fa-rss" style="color: #ee802f"></i></span></a>
             </li>
         </ul>
     </nav>
