--- a/themes/PaperMod/layouts/partials/header.html
+++ b/themes/PaperMod/layouts/partials/header.html
@@ -153,6 +153,9 @@
             </li>
             {{- end }}
             <li>
+                <a href="https://aside.markphilpot.com"><span><i class="fa-solid fa-microphone-lines" style="color: #309aea"></i></span></a>
+            </li>
+            <li>
                 <a href="https://pixelfed.social/mphilpot"><span><i class="fa-brands fa-instagram" style="color: #af44bd"></i></span></a>
             </li>
             <li>
