Set portfolio link

--- a/themes/PaperMod/layouts/partials/header.html
+++ b/themes/PaperMod/layouts/partials/header.html
@@ -156,7 +156,7 @@
                 <a href="https://aside.markphilpot.com"><span><i class="fa-solid fa-microphone-lines" style="color: #309aea"></i></span></a>
             </li>
             <li>
-                <a href="https://pixelfed.social/mphilpot"><span><i class="fa-brands fa-instagram" style="color: #af44bd"></i></span></a>
+                <a href="https://portfolio.markphilpot.com"><span><i class="fa-brands fa-instagram" style="color: #af44bd"></i></span></a>
             </li>
             <li>
                 <a href="https://philpot.org/@mark"><span><i class="fa-brands fa-mastodon" style="color: #6363f5"></i></span></a>
