Update mastodon links

--- a/themes/PaperMod/layouts/partials/header.html
+++ b/themes/PaperMod/layouts/partials/header.html
@@ -159,7 +159,7 @@
                 <a href="https://portfolio.markphilpot.com"><span><i class="fa-brands fa-instagram" style="color: #af44bd"></i></span></a>
             </li>
             <li>
-                <a href="https://philpot.org/@mark"><span><i class="fa-brands fa-mastodon" style="color: #6363f5"></i></span></a>
+                <a href="https://hachyderm.io/@markphilpot"><span><i class="fa-brands fa-mastodon" style="color: #6363f5"></i></span></a>
             </li>
             <li>
                 <a href="https://micro.markphilpot.com"><span><i class="fa-brands fa-microblog" style="color: #f6c443"></i></span></a>
