--- a/themes/PaperMod/layouts/partials/extend_head.html
+++ b/themes/PaperMod/layouts/partials/extend_head.html
@@ -7,3 +7,6 @@
 <link rel="stylesheet" href="/fontawesome/css/brands.min.css">
 <link rel="stylesheet" href="/fontawesome/css/solid.min.css">
 <link rel="stylesheet" href="/fontawesome/css/regular.min.css">
+
+<link rel="stylesheet" href="/js/lite-yt-embed.css" />
+<script src="/js/lite-yt-embed.js"></script>
