--- a/themes/PaperMod/layouts/partials/header.html
+++ b/themes/PaperMod/layouts/partials/header.html
@@ -105,7 +105,9 @@
                 {{- end }}
 
                 {{- $lang := .Lang}}
-                {{- $separator := or $label_text (not site.Params.disableThemeToggle)}}
+                {{/* Disabling since I don't have any translations */}}
+                {{ $separator := false }}
+                {{/*  {{- $separator := or $label_text (not site.Params.disableThemeToggle)}}  */}}
                 {{- with site.Home.AllTranslations }}
                 <ul class="lang-switch">
                     {{- if $separator }}<li>|</li>{{ end }}
