--- a/themes/PaperModX/layouts/_default/baseof.html
+++ b/themes/PaperModX/layouts/_default/baseof.html
@@ -14,6 +14,9 @@
 {{- print " dark" }}
 {{- end }} type-{{ .Type }} kind-{{ .Kind }} layout-{{ .Layout -}}
 " id="top">
+    {{- block "featuredImage" . }}
+    <div class="head-featuredImage" style="background-image: url('{{ "assets/deck_sunrise.jpg" | relURL }}')"></div>
+    {{ end }}
     {{- partialCached "header.html" . .Page -}}
     <main class="main {{- if (eq .Kind `page`) -}}{{- print " post" -}}{{- end -}}">
         {{- block "main" . }}{{ end }}
