--- a/themes/PaperModX/layouts/partials/extend_head.html
+++ b/themes/PaperModX/layouts/partials/extend_head.html
@@ -2,3 +2,11 @@
 {{- /*     Insert any custom code (web-analytics, resources, etc.) - it will appear in the <head></head> section of every page. */ -}}
 {{- /*     Can be overwritten by partial with the same name in the global layouts. */ -}}
 {{- /* Head custom content area end */ -}}
+<link rel="stylesheet" href="/fonts/font-family.css">
+<link rel="stylesheet" href="/fontawesome/css/fontawesome.min.css">
+<link rel="stylesheet" href="/fontawesome/css/brands.min.css">
+<link rel="stylesheet" href="/fontawesome/css/solid.min.css">
+<link rel="stylesheet" href="/fontawesome/css/regular.min.css">
+
+<link rel="stylesheet" href="/js/lite-yt-embed.css" />
+<script src="/js/lite-yt-embed.js"></script>
