--- a/themes/PaperModX/layouts/partials/header.html
+++ b/themes/PaperModX/layouts/partials/header.html
@@ -66,6 +66,20 @@ function toggleThemeListener() {
     switchTheme(theme);
   })();
 </script>
+<script>
+  if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+      document.body.classList.add('dark');
+  }
+
+  window.matchMedia('(prefers-color-scheme: dark)').addListener(function (e) {
+      if(e.matches) {
+          document.body.classList.add('dark');
+      } else {
+          document.body.classList.remove('dark');
+      }
+  });
+
+</script>
 
 <header class="header">
     <nav class="nav">
@@ -143,6 +157,21 @@ function toggleThemeListener() {
                 </a>
             </li>
             {{- end }}
+            <li>
+                <a href="https://aside.markphilpot.com"><span><i class="fa-solid fa-microphone-lines" style="color: #309aea"></i></span></a>
+            </li>
+            <li>
+                <a href="https://portfolio.markphilpot.com"><span><i class="fa-brands fa-instagram" style="color: #af44bd"></i></span></a>
+            </li>
+            <li>
+                <a href="https://hachyderm.io/@markphilpot"><span><i class="fa-brands fa-mastodon" style="color: #6363f5"></i></span></a>
+            </li>
+            <li>
+                <a href="https://micro.markphilpot.com"><span><i class="fa-brands fa-microblog" style="color: #f6c443"></i></span></a>
+            </li>
+            <li>
+                <a href="/index.xml"><span><i class="fa-solid fa-rss" style="color: #ee802f"></i></span></a>
+            </li>
         </ul>
     </nav>
 </header>
