--- a/themes/PaperModX/assets/css/extended/blank.css
+++ b/themes/PaperModX/assets/css/extended/blank.css
@@ -70,6 +70,6 @@ Read https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#bundling-custom-cs
     font-family: 'SourceSans3', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
   }
   
-  #menu a:hover span {
+  .menu a:hover span {
     box-shadow: 0 1px;
   }
