--- a/themes/PaperModX/assets/css/extended/blank.css
+++ b/themes/PaperModX/assets/css/extended/blank.css
@@ -32,6 +32,19 @@ Read https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#bundling-custom-cs
     margin-left: calc((1920px - 720px) / -2) !important;
     margin-right: calc((1920px - 720px) / -2) !important;
   }
+
+  .ewDiv {
+    max-width: 100vw !important;
+    margin-left: calc((100vw - 720px) / -2) !important;
+    margin-right: calc((100vw - 720px) / -2) !important;
+  }
+
+  .wDiv {
+    max-width: 80vw !important;
+    margin-left: calc((80vw - 720px) / -2) !important;
+    margin-right: calc((80vw - 720px) / -2) !important;
+  }
+
   @media (max-width: 1920px) {
     img[title="ew1920"] {
       max-width: 100vw !important;
@@ -39,13 +52,26 @@ Read https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#bundling-custom-cs
       margin-right: calc((100vw - 720px) / -2) !important;
     }
   }
+
   @media (max-width: 752px) {
     img[title="ew1920"] {
       max-width: 100vw !important;
       margin-left: -14px !important;
       margin-right: -14px !important;
     }
+    .ewDiv {
+      max-width: 100vw !important;
+      margin-left: -14px !important;
+      margin-right: -14px !important;
+    }
+    .wDiv {
+      max-width: 100vw !important;
+      margin-left: -14px !important;
+      margin-right: -14px !important;
+    }
   }
+
+  
   
   .post-content table {
     display: table;
