--- a/themes/PaperModX/layouts/_default/_markup/render-image.html
+++ b/themes/PaperModX/layouts/_default/_markup/render-image.html
@@ -1,26 +1,49 @@
-{{- $url := urls.Parse .Destination -}}
-{{- if $url.Scheme -}}
-  {{/* third party image */}}
-  <img loading="lazy" src="{{ .Destination | safeURL }}" alt="{{ $.Text }}" {{ with $.Title}} title="{{ . }}" {{ end }} />
-{{- else -}}
-  {{/* internal image */}}
-  {{- $img := .Page.Resources.GetMatch .Destination -}}
-  {{- if not $img -}}
-    {{- $img = resources.Get .Destination -}}
-  {{- end -}}
+{{- /*
+	This gives **normal** Markdown images --- i.e., using the `![Alt](imageURL)` syntax (which VS Code auto-completes) --- nearly all functionality of the `img` shortcode, except that this: (a.) hard-codes the `holder`, `hint`, and `filter` parameters; and, (b.) assumes no use of either `phn` or `simple`. None of these additional items can be supplied via a render hook but, instead, would require use of the full `img` shortcode.
 
-  {{- if $img -}}
-    {{- if eq $img.MediaType.MainType "video" -}}
-      <figure>
-      <video class="video-shortcode" preload="metadata" controls>
-        <source src="{{ $img.RelPermalink }}">
-        There should have been a video here but your browser does not seem to support it.
-      </video>
-      </figure>
-    {{- else -}}
-      <img loading="lazy" src="{{ $img.RelPermalink }}" type="" alt="{{ $.Text }}" {{ with $.Title}} title="{{ . }}" {{ end }} />
-    {{- end -}}
-  {{- else -}}
-    {{- warnf "No image found for %s from %s" .Destination .Page.File }}
-  {{- end -}}
+	See also:
+	- https://gohugo.io/templates/render-hooks/
+	- https://discourse.gohugo.io/t/get-a-remote-resource-with-its-url-defined-in-page-frontmatter/41690
+*/ -}}
+{{- $respSizes := slice "752" "1280" "1920" -}}
+{{- $alt := .Text -}}
+{{- $caption := .Title -}}
+{{- $src := .Destination -}}
+{{- $imgBd5 := md5 $src -}}
+{{- $dataSzes := "(min-width: 1024px) 100vw, 50vw" -}}
+{{- $holder := "LQIP" -}}
+{{- $hint := "photo" -}}
+{{- $filter := "box" -}}
+{{- $imgClass := "animate-fade" -}}
+
+{{- if .Page.Resources.GetMatch $src -}}
+	{{ with .Page.Resources.GetMatch $src }}
+		{{- $divClass := print "imgB-" $imgBd5 "-" $holder -}}
+		{{- $imgRsc := . -}}
+		{{- $actualImg := $imgRsc.Process (print "resize 640x jpg " $filter) -}}
+		<div class="{{ $divClass }}" data-pagefind-ignore {{ with $.Title}} title="{{ . }}" {{ end }}>
+			<picture data-pagefind-ignore>
+				<source type="image/webp" srcset="
+				{{- with $respSizes -}}
+					{{- range $i, $e := . -}}
+						{{- if ge $imgRsc.Width . -}}
+							{{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x webp " $hint " " $filter) ).RelPermalink }} {{ . }}w
+						{{- end -}}
+					{{- end -}}
+				{{- end -}}" sizes="{{ $dataSzes }}" />
+				<source type="image/jpeg" srcset="
+				{{- with $respSizes -}}
+					{{- range $i, $e := . -}}
+						{{- if ge $imgRsc.Width . -}}
+							{{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x jpg " $filter) ).RelPermalink }} {{ . }}w
+						{{- end -}}
+					{{- end -}}
+				{{- end -}}" sizes="{{ $dataSzes }}" />
+				<img style="height: auto;" class="{{ $imgClass }}" src="{{ $actualImg.RelPermalink }}" width="{{ $imgRsc.Width }}" height="{{ $imgRsc.Height }}" alt="{{ $.Text }}" {{ with $.Title}} title="{{ . }}" {{ end }} loading="lazy" data-pagefind-ignore />
+			</picture>
+		</div>
+	{{- end -}}
+{{- else -}}
+	<p class="ctr legal"><em>Image unavailable.</em></p>
 {{- end -}}
+{{- with $caption -}}<p class="imgCaption" {{ with $.Title}} title="{{ . }}" {{ end }}>{{ $caption | $.Page.RenderString }}</p>{{- end }}
