--- a/themes/PaperModX/layouts/_default/_markup/render-image.html
+++ b/themes/PaperModX/layouts/_default/_markup/render-image.html
@@ -18,10 +18,10 @@
 
 {{- if .Page.Resources.GetMatch $src -}}
 	{{ with .Page.Resources.GetMatch $src }}
-		{{- $divClass := print "imgB-" $imgBd5 "-" $holder -}}
+		{{- $divClass := print "imgPicContainer imgB-" $imgBd5 "-" $holder -}}
 		{{- $imgRsc := . -}}
 		{{- $actualImg := $imgRsc.Process (print "resize 640x jpg " $filter) -}}
-		<div class="{{ $divClass }}" data-pagefind-ignore {{ with $.Title}} title="{{ . }}" {{ end }}>
+		<div class="{{ $divClass }}" {{ with $imgRsc.Width }}{{- if ge 752 . -}}style="width: {{ $imgRsc.Width }}px;"{{- end }}{{ end }} data-pagefind-ignore {{ with $.Title}} title="{{ . }}" {{ end }}>
 			<picture data-pagefind-ignore>
 				<source type="image/webp" srcset="
 				{{- with $respSizes -}}
