More responsive images

--- a/themes/PaperModX/layouts/_default/baseof.html
+++ b/themes/PaperModX/layouts/_default/baseof.html
@@ -15,6 +15,39 @@
 {{- end }} type-{{ .Type }} kind-{{ .Kind }} layout-{{ .Layout -}}
 " id="top">
     {{- block "featuredImage" . }}
+    {{/*  {{ with resources.Get "deck_sunrise.jpg" }}
+        {{- $respSizes := slice "752" "1280" "1920" -}}
+        {{- $dataSzes := "(min-width: 1024px) 100vw, 50vw" -}}
+        {{- $holder := "LQIP" -}}
+        {{- $hint := "photo" -}}
+        {{- $filter := "box" -}}
+        {{- $imgClass := "head-featuredImage animate-fade" -}}
+    
+        {{- $divClass := "head-featuredImage" -}}
+        {{- $imgRsc := . -}}
+        {{- $actualImg := $imgRsc.Process (print "resize 640x jpg " $filter) -}}
+        <div class="{{ $divClass }}" {{ with $imgRsc.Width }}{{- if ge 752 . -}}style="width: {{ $imgRsc.Width }}px;"{{- end }}{{ end }} data-pagefind-ignore {{ with $.Title}} title="{{ . }}" {{ end }}>
+        <picture data-pagefind-ignore>
+            <source type="image/webp" srcset="
+            {{- with $respSizes -}}
+            {{- range $i, $e := . -}}
+                {{- if ge $imgRsc.Width . -}}
+                {{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x webp " $hint " " $filter) ).RelPermalink }} {{ . }}w
+                {{- end -}}
+            {{- end -}}
+            {{- end -}}" sizes="{{ $dataSzes }}" />
+            <source type="image/jpeg" srcset="
+            {{- with $respSizes -}}
+            {{- range $i, $e := . -}}
+                {{- if ge $imgRsc.Width . -}}
+                {{- if $i }}, {{ end -}}{{- ($imgRsc.Process (print "resize " . "x jpg " $filter) ).RelPermalink }} {{ . }}w
+                {{- end -}}
+            {{- end -}}
+            {{- end -}}" sizes="{{ $dataSzes }}" />
+            <img style="object-fit: cover;" class="{{ $imgClass }}" src="{{ $actualImg.RelPermalink }}" loading="lazy" data-pagefind-ignore />
+        </picture>
+        </div>
+    {{ end }}  */}}
     <div class="head-featuredImage" style="background-image: url('{{ "assets/deck_sunrise.jpg" | relURL }}')"></div>
     {{ end }}
     {{- partialCached "header.html" . .Page -}}
