--- a/themes/PaperModX/layouts/partials/header.html
+++ b/themes/PaperModX/layouts/partials/header.html
@@ -141,19 +141,19 @@ function toggleThemeListener() {
         <div class="menuContainer">
           <ul id="externalMenu" class="menu">
             <li>
-              <a href="https://aside.markphilpot.com"><span><i class="fa-solid fa-microphone-lines" style="color: #309aea"></i></span></a>
+              <a href="https://aside.markphilpot.com"><span>{{ partial "svg" (dict "icon" "SimpleIconsApplepodcasts" "class" "icon-sm" "style" "color: #309aea") }}</span></a>
           </li>
           <li>
-              <a href="https://portfolio.markphilpot.com"><span><i class="fa-brands fa-instagram" style="color: #af44bd"></i></span></a>
+              <a href="https://portfolio.markphilpot.com"><span>{{ partial "svg" (dict "icon" "SimpleIconsInstagram" "class" "icon-sm" "style" "color: #af44bd") }}</span></a>
           </li>
           <li>
-              <a href="https://hachyderm.io/@markphilpot"><span><i class="fa-brands fa-mastodon" style="color: #6363f5"></i></span></a>
+              <a href="https://hachyderm.io/@markphilpot"><span>{{ partial "svg" (dict "icon" "SimpleIconsMastodon" "class" "icon-sm" "style" "color: #6363f5") }}</span></a>
           </li>
           <li>
-              <a href="https://micro.markphilpot.com"><span><i class="fa-brands fa-microblog" style="color: #f6c443"></i></span></a>
+              <a href="https://micro.markphilpot.com"><span>{{ partial "svg" (dict "icon" "SimpleIconsMicrodotblog" "class" "icon-sm" "style" "color: #f6c443") }}</span></a>
           </li>
           <li>
-              <a href="/index.xml"><span><i class="fa-solid fa-rss" style="color: #ee802f"></i></span></a>
+              <a href="/index.xml"><span>{{ partial "svg" (dict "icon" "SimpleIconsRss" "class" "icon-sm" "style" "color: #ee802f") }}</span></a>
           </li>
           </ul>
           <ul id="menu" class="menu">
